@@ -76,3 +76,5 @@ string.h \
 stdlib.h
 ])
 
+dnl Check for strtoll, atoll
+AC_CHECK_FUNCS(strtoll atoll)
